<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">android_small___1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_cinemeter">CineMeter</string>
    <string name="msg">************************</string>
    <string name="lbl_registrate">Registrate</string>
    <string name="lbl_ingresar">Ingresar</string>
    <string name="msg_example_example_com">example@example.com</string>
    <string name="msg_no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="lbl_contrase_a">contraseña</string>
    <string name="msg_confirmar_contrase_a">confirmar contraseña</string>
    <string name="lbl_usuario123">usuario123</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_registrarse">Registrarse</string>
    <string name="msg_ultimos_lanzamientos">Ultimos lanzamientos</string>

    <string name="lbl_20_06_2024">20/06/2024</string>
    <string name="msg_lorem_ipsum_dolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="lbl_kennyp2233">\@kennyp2233</string>
    <string name="msg_rese_a_intensamente">Reseña Intensamente</string>
    <string name="lbl_ingresar_rese_a">Ingresar reseña</string>
    <string name="lbl_ingrese_titulo">Ingrese titulo</string>
    <string name="lbl_agregar_imagen">Agregar imagen</string>
    <string name="lbl_inicio">Inicio</string>
    <string name="lbl">+</string>
    <string name="lbl_publicar">Publicar</string>
    <string name="lbl_agregar_tags">Agregar tags</string>
    <string name="msg_escriba_una_rese_a">Escriba una reseña</string>
</resources>
