<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="8dp">

    <LinearLayout

        style="@style/groupStylegray_900_01cornerRadius"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_15pxh"
        android:paddingVertical="@dimen/_15pxv">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView

                    android:layout_width="@dimen/_16pxh"
                    android:layout_height="@dimen/_16pxh"
                    android:layout_gravity="top"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_icon_user_lime_100"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_icon_user_lime_100" />

                <TextView
                    android:id="@+id/txtAutor"
                    style="@style/txtRobotoromanregular14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:ellipsize="end"
                    android:gravity="bottom"
                    android:singleLine="true"
                    android:text=""
                    tools:text="@string/lbl_kennyp2233" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtTema"
                style="@style/txtRobotoromansemibold20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5pxv"
                android:text=""
                tools:text="@string/msg_rese_a_intensamente" />

            <TextView
                android:id="@+id/txtDate"
                style="@style/txtRobotoromanregular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8pxv"
                android:ellipsize="end"
                android:singleLine="true"
                android:text=""
                tools:text="@string/lbl_20_06_2024" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUltimos"
                style="@style/btnSolidRounded"
                android:layout_width="@dimen/_123pxh"
                android:layout_height="28dp"
                android:layout_marginTop="@dimen/_7pxv"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_4pxv"
                android:paddingEnd="@dimen/_8pxh"
                android:paddingBottom="@dimen/_4pxv"
                android:singleLine="true"
                android:text="@string/msg_ultimos_lanzamientos"
                android:textAllCaps="false"
                tools:text="@string/msg_ultimos_lanzamientos" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
