<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublicarResena">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_900">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/volver_inicio_2"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15pxv"
                android:layout_marginEnd="@dimen/_245pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_26pxh"
                    android:layout_width="@dimen/_26pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrow_left"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrow_left"/>
                <TextView android:ellipsize="end"

                    android:layout_gravity="top"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    style="@style/txtRobotoromanregular20" tools:text="@string/lbl_inicio"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="545dp"
            android:orientation="vertical"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_25pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_25pxv">

            <EditText
                android:id="@+id/etEntertitleOne"
                style="@style/etSolidRounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_bg_gray_800_radius_8"
                android:ellipsize="end"
                android:hint="@string/lbl_ingrese_titulo"
                android:inputType="text"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_8pxv"
                android:paddingEnd="@dimen/_16pxh"
                android:paddingBottom="@dimen/_8pxv"
                android:singleLine="true"
                android:textColorHint="@color/lime_100"
                tools:ignore="Autofill" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21pxv"
                android:gravity="start"
                android:orientation="vertical">

                <TextView

                    style="@style/txtRobotoromanregular16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    tools:text="@string/lbl_ingresar_rese_a" />

                <EditText
                    android:id="@+id/etWritereviewOne"
                    style="@style/etSolidRounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:background="@drawable/rectangle_bg_gray_800_radius_8"
                    android:hint="@string/msg_escriba_una_rese_a"
                    android:inputType="text"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_7pxv"
                    android:paddingEnd="@dimen/_16pxh"
                    android:paddingBottom="@dimen/_7pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/lime_100"
                    tools:ignore="Autofill" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21pxv"
                android:gravity="start"
                android:orientation="vertical">

                <TextView

                    style="@style/txtRobotoromanregular16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    tools:text="Escribe una categoria" />

                <EditText
                    android:id="@+id/categoryInput"
                    style="@style/etSolidRounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:background="@drawable/rectangle_bg_gray_800_radius_8"
                    android:hint="Escribe una Categoria"
                    android:inputType="text"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_7pxv"
                    android:paddingEnd="@dimen/_16pxh"
                    android:paddingBottom="@dimen/_7pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/lime_100"
                    tools:ignore="Autofill" />
            </LinearLayout>
            <Button
                android:id="@+id/btnPublicar"
                style="@style/btnSolidRounded_1"
                android:layout_width="@dimen/_127pxh"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_marginBottom="@dimen/_5pxv"
                android:drawableStart="@drawable/img_icon_save"
                android:drawablePadding="@dimen/_10pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_11pxv"
                android:paddingEnd="@dimen/_16pxh"
                android:paddingBottom="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@string/lbl_publicar"
                android:textAllCaps="false"
                tools:text="@string/lbl_publicar" />
        </LinearLayout>
        <FrameLayout android:gravity="center_horizontal"
            android:id="@+id/frameBottombar"
            android:layout_height="wrap_content" android:layout_width="match_parent"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
